🧱 arch(market): 업비트 시세 조회 앱 멀티모듈 아키텍처 구현
Clean Architecture 기반 멀티모듈 구조 구성:
- core: common, network, ui, testing
- domain: market (Entity, UseCase)
- data: market (DTO, Repository)
- feature: market (ViewModel, Screen)

주요 기능:
- 업비트 API 연동 (마켓 목록, 현재가, 호가)
- Koin DI, Navigation Compose
- OkHttp 캐싱 전략 (오프라인 지원)
- Kover 테스트 커버리지 설정
- GitHub Actions CI 워크플로우

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,12 @@
 .cxx
 local.properties
 
+# Build outputs - all modules
+**/build/
+**/release/
+*.apk
+*.aab
+
 # Security - API Keys & Secrets
 *.jks
 *.keystore
@@ -38,8 +44,27 @@ service-account*.json
 *.ipr
 *.iws
 
-# Build outputs
-app/build/
-app/release/
-*.apk
-*.aab
+# Kotlin
+*.kotlin_module
+
+# Gradle
+.gradle/
+gradle-app.setting
+!gradle-wrapper.jar
+gradle/build
+
+# Test outputs
+**/test-results/
+**/reports/
+
+# Kover coverage
+**/kover/
+
+# Generated files
+**/generated/
+**/intermediates/
+**/tmp/
+**/.transforms/
+
+# Local configuration
+*.local
